--- a/style.css
+++ b/style.css
@@ -6,3 +6,15 @@ html, body {
   height: 100%;
   margin: 0px;
 }
+
+#gameArea {
+  position: absolute;
+  left:     50%;
+  top:      50%;
+}
+
+#gameCanvas
+{
+	width: 100%;
+  	height: 100%;
+}
